# redux-server-rust

./: Cargo.toml  Dockerfile  Dockerfile.scratch  Insomnia.json  README.md
src/: lib.rs  main.rs
static/: index.html
