[package]
name = "redux-server-rust"
version = "1.0.4-pre"
authors = ["Michael Kaaden <github@kaaden.net>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.5.4"
actix-web = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
built = "0.4"
